<resources>
    <string name="app_name">Soccer Players</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuário</string>
    <string name="entrar">Entrar</string>
    <string name="logo">logo</string>
    <string name="user_name">Nome</string>
    <string name="user_email">Email</string>
    <string name="usercreate_text">Criar Usuário</string>
    <string name="create_account">Criar Conta</string>
    <string name="login">Login</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="welcome">Seja Bem Vindo!</string>

    <string name="preferences_key">SoccerPlayersKey</string>
</resources>